--- a/workspace/sysnat.test.execution/AvailableNaturalLanguageScripts.properties
+++ b/workspace/sysnat.test.execution/AvailableNaturalLanguageScripts.properties
@@ -1,1 +1,1 @@
-FilenameScript=com.iksgmbh.sysnat.test.FilenameScript
+DownloadPdfAndCheckContentScript=homepageiks.pdfdownload.DownloadPdfAndCheckContentScript
