--- a/workspace/sysnat.testcase.generation/src/main/resources/StageInstructions.config
+++ b/workspace/sysnat.testcase.generation/src/main/resources/StageInstructions.config
@@ -1,8 +1,10 @@
 # Note: Valid Stage Instructions must end with ":"
 
 # Common Stage Instructions
-Test-Id:
-Test-ID:
+XXId:
+XXID:
+XX-ID:
+XX-Id:
 Test-Parameter: 
 
 # German Stage Instructions
