TestApplicationExImporter and some smaller improvements

--- a/workspace/sysnat.natural.language.executable.examples/settings.config
+++ b/workspace/sysnat.natural.language.executable.examples/settings.config
@@ -2,19 +2,19 @@
 
 # Values allowed / Mögliche Werte:
 # HomePageIKS, HelloWorldSpringBoot, ICF
-Zu_testende_Anwendung = HelloWorldSpringBoot
+Zu_testende_Anwendung = ICF
 #Application_Under_Test=HelloWorldSpringBoot
 
 # Values allowed / Mögliche Werte:
 # LOCAL, DEVELOPMENT, INTEGRATION, ACCEPTANCE, PRODUCTION
-Zielumgebung = LOCAL
+Zielumgebung = ACCEPTANCE
 #Environment=LOCAL
 
 # ToolTip: Mögliche Werte siehe Report-Datei (z.B. 'Smoketest', für eine Testausführung ohne Filter einfach Leer lassen.)
 # ToolTip: Es können auch negative Kategorien verwenden verwenden (z.B. 'NICHT-Login')
 # Negative Kategorien werden ausgeschlossen und dürfen nur als Einschränkungen hinter positiven verwendet werden (z.B. 'Vertragsdruck,NICHT-Loan')
 # Außerdem können die Namen der NatSpec-Dateien als FilterKategorien benutzt werden  ,PdfDruck_Wohnmobil
-Filter_auszufuehrende_Testkategorien = Smoketest
+Filter_auszufuehrende_Testkategorien = -
 #Filter_of_Test_Categories_to_Execute=
 
 #################  Section 2: Test execution  #######################
