Use of BDD-Keywords implemented

--- a/workspace/sysnat.natural.language.executable.examples/settings.config
+++ b/workspace/sysnat.natural.language.executable.examples/settings.config
@@ -1,13 +1,13 @@
 #################  Section 1: Test target and test set  #######################
 
 # Values allowed / Mögliche Werte:
-# HomePageIKS, HelloWorldSpringBoot, ICF
-Zu_testende_Anwendung = ICF
+# HomePageIKS, HelloWorldSpringBoot
+Zu_testende_Anwendung = HelloWorldSpringBoot
 #Application_Under_Test=HelloWorldSpringBoot
 
 # Values allowed / Mögliche Werte:
 # LOCAL, DEVELOPMENT, INTEGRATION, ACCEPTANCE, PRODUCTION
-Zielumgebung = ACCEPTANCE
+Zielumgebung = LOCAL
 #Environment=LOCAL
 
 # ToolTip: Mögliche Werte siehe Report-Datei (z.B. 'Smoketest', für eine Testausführung ohne Filter einfach Leer lassen.)
