library file set into html format

--- a/workspace/sysnat.test.runtime.environment/src/main/resources/execution_properties/execution.properties
+++ b/workspace/sysnat.test.runtime.environment/src/main/resources/execution_properties/execution.properties
@@ -18,7 +18,7 @@ sysnat.languageTemplateContainer.source.dir=../sysnat.test.runtime.environment/s
 sysnat.generation.target.dir=../sysnat.test.execution/src/test/gen
 sysnat.nls.lookup.file=../sysnat.test.execution/AvailableNaturalLanguageScripts.properties
 sysnat.testdata.import.directory=../sysnat.natural.language.executable.examples/testdata
-sysnat.help.command.list.file=../sysnat.natural.language.executable.examples/help/ExistingNLInstructions_<testapp>.txt
+sysnat.help.command.list.file=../sysnat.natural.language.executable.examples/help/ExistingNLInstructions_<testapp>.html
 
 # test purpose
 sysnat.dummy.test.run=false
