--- a/workspace/sysnat.testcase.generation/src/main/resources/BDDKeywords.config
+++ b/workspace/sysnat.testcase.generation/src/main/resources/BDDKeywords.config
@@ -21,7 +21,7 @@ Feature            # Starts a new test series (group of XX belonging together)
 
 # German Keywords 
 Scenario
-Einmaliger-Hintergrund
+EinmalHintergrund
 Hintergrund
 Gegeben
 Wenn
@@ -29,11 +29,11 @@ Dann
 Und
 Aber
 Aufräumen
-Einmaliges-Aufräumen
+EinmalAufräumen
 
 # English Keywords
 Scenario             # Starts a new XX
-One-Time-Background  # Calls a script executed once before the whole test series starts starts
+OneTimeBackground    # Calls a script executed once before the whole test series starts starts
 Background           # Calls a script executed for each XX in the test series
 Given                # Calls a script to execute an ARRANGE step
 When                 # Calls a script to execute an ACT step
@@ -41,4 +41,4 @@ Then                 # Calls a script to execute an ASSERT step
 And                  # Connects semantically with last keyword used
 But                  # Connects semantically with last keyword used
 Cleanup              # Calls a script executed for each XX after its excecution
-One-Time-Cleanup     # Calls a script executed once after the whole test series has been executed
+OneTimeCleanup       # Calls a script executed once after the whole test series has been executed
