--- a/workspace/sysnat.testcase.generation/src/main/resources/StageInstructions.config
+++ b/workspace/sysnat.testcase.generation/src/main/resources/StageInstructions.config
@@ -15,6 +15,10 @@ Aktiv:
 Ausführungsfilter:
 Kommentar:
 Testdaten: 
+EinmalVoraussetzung:
+Voraussetzung:
+Aufräumen:
+EinmalAufräumen:
 
 # English Stage Instructions
 Behaviour:
@@ -22,4 +26,8 @@ Behavior:
 Active:
 Tags:
 Comment: 
-TestData: 
+TestData:
+OneTimePrecondition:
+Precondition:
+Cleanup:
+OneTimeCleanup:
