Saving reports and screenshots improved

--- a/workspace/sysnat.test.execution/AvailableNaturalLanguageScripts.properties
+++ b/workspace/sysnat.test.execution/AvailableNaturalLanguageScripts.properties
@@ -1,1 +1,3 @@
-MiniTestScript=com.iksgmbh.sysnat.test.integration.testcase.MiniTestScript
+ArbeitszeiteingebenScript=iksonline.skripte.ArbeitszeiteingebenScript
+TagesBuchungsdatenEingebenScript=iksonline.skripte.TagesBuchungsdatenEingebenScript
+FahrtzeitEingebenScript=iksonline.skripte.FahrtzeitEingebenScript
