--- a/workspace/sysnat.test.runtime.environment/src/main/resources/execution_properties/execution.properties
+++ b/workspace/sysnat.test.runtime.environment/src/main/resources/execution_properties/execution.properties
@@ -9,6 +9,7 @@ sysnat.webdriver.executable.firefox.gecko=geckodriver0.21.0.exe
 sysnat.webdriver.executable.firefox_45_9.gecko=geckodriver0.15.0.exe
 sysnat.path.to.firefox_45_9.dir=..//..//webdriver//MozillaFirefox45.9//bin
 sysnat.path.to.firefox.dir=C://Program Files//Mozilla Firefox
+#sysnat.path.to.firefox.dir=..//..//webdriver//MozillaFirefox61
 
 # input output paths
 sysnat.report.dir=../sysnat.natural.language.executable.examples/reports
