--- a/workspace/sysnat.testcase.generation/src/main/resources/BDDKeywords.config
+++ b/workspace/sysnat.testcase.generation/src/main/resources/BDDKeywords.config
@@ -20,7 +20,7 @@
 Feature            # Starts a new test series (group of XX belonging together)
 
 # German Keywords 
-Scenario
+Szenario
 EinmalHintergrund
 Hintergrund
 Gegeben
