--- a/workspace/sysnat.natural.language.executable.examples/settings.config
+++ b/workspace/sysnat.natural.language.executable.examples/settings.config
@@ -1,8 +1,8 @@
 #################  Section 1: Test target and test set  #######################
 
 # Values allowed / Mögliche Werte:
-# HomePageIKS, HelloWorldSpringBoot
-Zu_testende_Anwendung = HomePageIKS
+# HomePageIKS, HelloWorldSpringBoot, IksOnline
+Zu_testende_Anwendung = IksOnline
 #Application_Under_Test=HelloWorldSpringBoot
 
 # Values allowed / Mögliche Werte:
@@ -10,18 +10,21 @@ Zu_testende_Anwendung = HomePageIKS
 Zielumgebung = PRODUCTION
 #Environment=LOCAL
 
-# ToolTip: Mögliche Werte siehe Report-Datei (z.B. 'Smoketest', für eine Testausführung ohne Filter einfach Leer lassen.)
+# ToolTip: Werte, die hier möglich sind, lassen sich einer Report-Datei entnehmen.
+# ToolTip: Filterwerte können in den nlxx-Dateien definiert werden.
 # ToolTip: Es können auch negative Filter verwenden verwenden (z.B. 'NICHT-Login')
 # ToolTip: Negative Filter werden ausgeschlossen und dürfen nur als Einschränkungen hinter positiven verwendet werden (z.B. 'Vertragsdruck,NICHT-Loan')
 # ToolTip: Außerdem können die Namen der nlxx-Dateien als Filter benutzt werden.
-Ausführungsfilter = -
+# Values allowed / Mögliche Werte:
+# Smoketest
+Ausführungsfilter = Smoketest
 #ExecutionFilter=
 
 #################  Section 2: Test execution  #######################
 
 # Values allowed / Mögliche Werte:
 # Firefox, Firefox_45_9, Chrome, IE
-Browser = Firefox
+Browser = FIREFOX
 
 # Values allowed:
 # fast, slow, verySlow
@@ -32,7 +35,7 @@ Geschwindigkeit_der_Testausfuehrung = schnell
 
 #################  Section 3: Test report  #######################
 
-Name_des_Testberichts = ICF-ACCEPTANCE
+Name_des_Testberichts = IksOnline-PRODUCTION-Smoketest
 #Report_Name
 
 Archiv-Verzeichnis = C:/dev/SysNatTesting/workspace/sysnat.testresult.archiving/target
@@ -43,4 +46,8 @@ Archiv-Verzeichnis = C:/dev/SysNatTesting/workspace/sysnat.testresult.archiving/
 
 # Values allowed: on, off
 # Mögliche Werte: an, aus
-SettingsConfigDialog=aus
+SettingsConfigDialog=an
+
+
+
+# cmd /c "cd /d ""C:\dev\SysNat"" && ""StartSysNatTesting.bat"""
