--- a/workspace/sysnat.natural.language.executable.examples/settings.config
+++ b/workspace/sysnat.natural.language.executable.examples/settings.config
@@ -1,8 +1,8 @@
 #################  Section 1: Test target and test set  #######################
 
 # Values allowed / Mögliche Werte:
-# HomePageIKS, HelloWorldSpringBoot, IksOnline
-Zu_testende_Anwendung = IksOnline
+# HomePageIKS, HelloWorldSpringBoot
+Zu_testende_Anwendung = HomePageIKS
 #Application_Under_Test=HelloWorldSpringBoot
 
 # Values allowed / Mögliche Werte:
@@ -35,7 +35,7 @@ Geschwindigkeit_der_Testausfuehrung = schnell
 
 #################  Section 3: Test report  #######################
 
-Name_des_Testberichts = IksOnline-PRODUCTION-Smoketest
+Name_des_Testberichts = HomePageIKS-PRODUCTION-Smoketest
 #Report_Name
 
 Archiv-Verzeichnis = C:/dev/SysNatTesting/workspace/sysnat.testresult.archiving/target
