--- a/workspace/sysnat.test.runtime.environment/src/main/resources/execution_properties/execution.properties
+++ b/workspace/sysnat.test.runtime.environment/src/main/resources/execution_properties/execution.properties
@@ -1,15 +1,28 @@
 ####################
+# personal properties
+####################
+root.path=..//..
+sysnat.download.dir=<user.home>/Downloads
+#sysnat.path.to.firefox.dir=C://Program Files//Mozilla Firefox
+#sysnat.path.to.firefox.dir=..//..//webdriver//MozillaFirefox61
+absolute.path.to.firefox.root.dir=C://Program Files//Mozilla Firefox
+#relative.path.to.firefox.root.dir=..//..//..//webdriver//MozillaFirefox45
+
+
+####################
 # common properties
 ####################
 
 # driver properties
+path.to.webdrivers=<root.path>//webdriver
+sysnat.path.to.firefox_45_9.dir==<path.to.webdrivers>//MozillaFirefox45.9//bin
+sysnat.path.to.firefox_54.dir=<path.to.webdrivers>//MozillaFirefox54
+
 sysnat.webdriver.executable.chrome=chromedriver2.40.exe
 sysnat.webdriver.executable.ie=IEDriverServer3.13.0.exe
 sysnat.webdriver.executable.firefox.gecko=geckodriver0.21.0.exe
+sysnat.webdriver.executable.firefox_54.gecko=geckodriver0.17.0.exe
 sysnat.webdriver.executable.firefox_45_9.gecko=geckodriver0.15.0.exe
-sysnat.path.to.firefox_45_9.dir=..//..//webdriver//MozillaFirefox45.9//bin
-sysnat.path.to.firefox.dir=C://Program Files//Mozilla Firefox
-#sysnat.path.to.firefox.dir=..//..//webdriver//MozillaFirefox61
 
 # input output paths
 sysnat.report.dir=../sysnat.natural.language.executable.examples/reports
