--- a/workspace/sysnat.test.runtime.environment/src/main/resources/execution_properties/HomePageIKS.properties
+++ b/workspace/sysnat.test.runtime.environment/src/main/resources/execution_properties/HomePageIKS.properties
@@ -1,6 +1,6 @@
 # HomePageIKS properties
 isWebApplication=true
 withLogin=false
-homepageiks.production.login.url=https://www.iks-gmbh.com/
+StartParameter=starturl
 
-
+homepageiks.production.starturl=https://www.iks-gmbh.com/
