PDF validation introduced

--- a/workspace/sysnat.test.runtime.environment/src/main/resources/execution_properties/execution.properties
+++ b/workspace/sysnat.test.runtime.environment/src/main/resources/execution_properties/execution.properties
@@ -2,11 +2,9 @@
 # personal properties
 ####################
 root.path=..//..
-sysnat.download.dir=<user.home>/Downloads
-#sysnat.path.to.firefox.dir=C://Program Files//Mozilla Firefox
-#sysnat.path.to.firefox.dir=..//..//webdriver//MozillaFirefox61
+sysnat.download.dir=<user.home>//Downloads
 absolute.path.to.firefox.root.dir=C://Program Files//Mozilla Firefox
-#relative.path.to.firefox.root.dir=..//..//..//webdriver//MozillaFirefox45
+#relative.path.to.firefox.root.dir=<root.path>//webdriver//MozillaFirefox65
 
 
 ####################
