--- a/workspace/sysnat.natural.language.executable.examples/settings.config
+++ b/workspace/sysnat.natural.language.executable.examples/settings.config
@@ -17,7 +17,7 @@ Zielumgebung = PRODUCTION
 # ToolTip: Außerdem können die Namen der nlxx-Dateien als Filter benutzt werden.
 # Values allowed / Mögliche Werte:
 # Smoketest
-Ausführungsfilter = Smoketest
+Ausführungsfilter = -
 #ExecutionFilter=
 
 #################  Section 2: Test execution  #######################
