PageObject refactored and LanguageTemplateBasics introduced

--- a/workspace/sysnat.natural.language.executable.examples/settings.config
+++ b/workspace/sysnat.natural.language.executable.examples/settings.config
@@ -2,13 +2,13 @@
 
 # Values allowed / Mögliche Werte:
 # HomePageIKS, HelloWorldSpringBoot
-Zu_testende_Anwendung = HomePageIKS
-#Application_Under_Test=HelloWorldSpringBoot
+Application_Under_Test = HomePageIKS
+#Zu_testende_Anwendung = HelloWorldSpringBoot
 
 # Values allowed / Mögliche Werte:
 # LOCAL, DEVELOPMENT, INTEGRATION, ACCEPTANCE, PRODUCTION
-Zielumgebung = PRODUCTION
-#Environment=LOCAL
+Environment = PRODUCTION
+#Zielumgebung = LOCAL
 
 # ToolTip: Werte, die hier möglich sind, lassen sich einer Report-Datei entnehmen.
 # ToolTip: Filterwerte können in den nlxx-Dateien definiert werden.
@@ -17,8 +17,8 @@ Zielumgebung = PRODUCTION
 # ToolTip: Außerdem können die Namen der nlxx-Dateien als Filter benutzt werden.
 # Values allowed / Mögliche Werte:
 # Smoketest
-Ausführungsfilter = -
-#ExecutionFilter=
+ExecutionFilter = -
+#Ausführungsfilter = -
 
 #################  Section 2: Test execution  #######################
 
@@ -30,24 +30,24 @@ Browser = FIREFOX
 # fast, slow, verySlow
 # Mögliche Werte:
 # schnell, normal, langsam
-Geschwindigkeit_der_Testausfuehrung = schnell
-#Speed_of_Execution=fast
+Speed_of_Execution=fast
+#Geschwindigkeit_der_Testausfuehrung = schnell
 
 #################  Section 3: Test report  #######################
 
-Name_des_Testberichts = HomePageIKS-PRODUCTION-Smoketest
-#Report_Name
+#Name_des_Testberichts = 
+Report_Name =
 
-Archiv-Verzeichnis = C:/dev/SysNatTesting/workspace/sysnat.testresult.archiving/target
-#Archive_Directory=
-
+#Archiv-Verzeichnis = 
+Archive_Directory=
 
 #################  MISC  #######################
 
 # Values allowed: on, off
 # Mögliche Werte: an, aus
-SettingsConfigDialog=an
+Start_With_SettingsConfigDialog=on
+#Starte_Mit_SettingsConfigDialog=an
 
 
-
+# Console start command:
 # cmd /c "cd /d ""C:\dev\SysNat"" && ""StartSysNatTesting.bat"""
