--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 .settings/
 target
 
-//sources/sysnat.test.execution/src/test/gen/**
+sources/sysnat.test.execution/src/test/gen/**
 sources/sysnat.test.execution/src/main/
 sources/sysnat.natural.language.executable.examples/reports/**
 
