--- a/sources/sysnat.natural.language.executable.examples/settings.config
+++ b/sources/sysnat.natural.language.executable.examples/settings.config
@@ -50,4 +50,7 @@ Start_With_SettingsConfigDialog=on
 
 
 # Console start command:
-# cmd /c "cd /d ""C:\dev\SysNat\Notepad++"" && ""StartSysNatTesting.bat"""
+# cmd /c "cd /d ""../.."" && ""StartSysNatTesting.bat"""
+# cmd /c "cd /d ""../../../sources\sysnat.natural.language.executable.examples\src\main\resources\batFiles"" && ""clearReportDir.bat"""
+# cmd /c "cd /d ""../../../sources\sysnat.natural.language.executable.examples\src\main\resources\batFiles"" && ""deleteAllPdfFilesInDownloadDir.bat"""
+
