--- a/sources/sysnat.test.runtime.environment/src/main/resources/execution_properties/execution.properties
+++ b/sources/sysnat.test.runtime.environment/src/main/resources/execution_properties/execution.properties
@@ -13,11 +13,11 @@ absolute.path.to.firefox.root.dir=C://Program Files//Mozilla Firefox
 
 # driver properties
 path.to.webdrivers=<root.path>//webdriver
-sysnat.path.to.firefox_45_9.dir==<path.to.webdrivers>//MozillaFirefox45.9//bin
-sysnat.path.to.firefox_54.dir=<path.to.webdrivers>//MozillaFirefox54
+#sysnat.path.to.firefox_45_9.dir==<path.to.webdrivers>//MozillaFirefox45.9//bin  provide if you wish to use
+#sysnat.path.to.firefox_54.dir=<path.to.webdrivers>//MozillaFirefox54
 
 sysnat.webdriver.executable.chrome=chromedriver2.40.exe
-sysnat.webdriver.executable.ie=IEDriverServer3.13.0.exe
+sysnat.webdriver.executable.ie=IEDriverServer3.13.exe
 sysnat.webdriver.executable.firefox.gecko=geckodriver0.21.0.exe
 sysnat.webdriver.executable.firefox_54.gecko=geckodriver0.17.0.exe
 sysnat.webdriver.executable.firefox_45_9.gecko=geckodriver0.15.0.exe
