--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ target
 
 sources/sysnat.test.execution/src/test/gen/**
 sources/sysnat.test.execution/src/main/
+sources/sysnat.natural.language.executable.examples/reports/**
 
 webdriver/MozillaFirefox45.9
 webdriver/MozillaFirefox54
