--- a/sources/sysnat.parent/pom.xml
+++ b/sources/sysnat.parent/pom.xml
@@ -3,7 +3,7 @@
 	
 	<groupId>com.iksgmbh.snt</groupId>
 	<artifactId>sysnat.parent</artifactId>
-	<version>1.0.0</version>
+	<version>1.1.0-SNAPTHOT</version>
 	<name>SNT Parent Module</name>
 	<packaging>pom</packaging>
 	
@@ -23,7 +23,7 @@
 	   	<dependency>
 			<groupId>com.iksgmbh.snt</groupId>
 	 		<artifactId>sysnat.common</artifactId>
-			<version>1.0.0</version>
+			<version>1.1.0-SNAPTHOT</version>
 	  	</dependency>
 		
 	  	<dependency>
