Notepad configuration improved

--- a/Notepad++/Data/settings/Notepad++PortableSettings.ini
+++ b/Notepad++/Data/settings/Notepad++PortableSettings.ini
@@ -1,5 +1,5 @@
 [Notepad++PortableSettings]
 LastDrive=C:
-LastDirectory=\dev\SysNat\Notepad++
+LastDirectory=\Bubu3\Notepad++
 [PortableApps.comLauncherLastRunEnvironment]
-PAL:LastPortableAppsBaseDir=C:\dev
+PAL:LastPortableAppsBaseDir=C:
