Solved Issue #10: Bad environment selection. & SettingConfigDialog renamed to SysNatStartDialog.

--- a/sources/sysnat.natural.language.executable.examples/settings.config
+++ b/sources/sysnat.natural.language.executable.examples/settings.config
@@ -1,8 +1,8 @@
 #################  Section 1: Test target and test set  #######################
 
 # Values allowed / Mögliche Werte:
-# HomePageIKS, HelloWorldSpringBoot
-Application_Under_Test = HomePageIKS
+# HomePageIKS, HelloWorldSpringBoot, GoogleSearch
+Application_Under_Test = GoogleSearch
 #Zu_testende_Anwendung = HelloWorldSpringBoot
 
 # Values allowed / Mögliche Werte:
@@ -45,8 +45,8 @@ Archive_Directory=
 
 # Values allowed: on, off
 # Mögliche Werte: an, aus
-Start_With_SettingsConfigDialog=on
-#Starte_Mit_SettingsConfigDialog=an
+Start_With_SysNatStartDialog=on
+#Starte_Mit_SysNatStartDialog=an
 
 
 # Console start command:
