Solved issue 14 and 15: Initializing Error Message and Browser Usage for report launching.

--- a/sources/sysnat.natural.language.executable.examples/settings.config
+++ b/sources/sysnat.natural.language.executable.examples/settings.config
@@ -1,8 +1,8 @@
 #################  Section 1: Test target and test set  #######################
 
 # Values allowed / Mögliche Werte:
-# HomePageIKS, HelloWorldSpringBoot, GoogleSearch
-Application_Under_Test = GoogleSearch
+# HomePageIKS, HelloWorldSpringBoot
+Application_Under_Test = HomePageIKS
 #Zu_testende_Anwendung = HelloWorldSpringBoot
 
 # Values allowed / Mögliche Werte:
@@ -24,7 +24,7 @@ ExecutionFilter = -
 
 # Values allowed / Mögliche Werte:
 # Firefox, Firefox_45_9, Chrome, IE
-Browser = FIREFOX
+Browser = Firefox
 
 # Values allowed:
 # fast, slow, verySlow
