--- a/sources/sysnat.common/pom.xml
+++ b/sources/sysnat.common/pom.xml
@@ -9,6 +9,12 @@
 
 	<dependencies>
 
+	     <dependency>
+	        <groupId>org.seleniumhq.selenium</groupId>
+	        <artifactId>selenium-java</artifactId>
+	        <version>3.13.0</version>
+	    </dependency> 
+	
 		<dependency>
 		   <groupId>com.testautomationguru.pdfutil</groupId>
 		   <artifactId>pdf-util</artifactId>
