Issue #13 implemented: Generattion of system documentation

--- a/sources/sysnat.natural.language.executable.examples/docing.config
+++ b/sources/sysnat.natural.language.executable.examples/docing.config
@@ -6,7 +6,7 @@ DocApplication = HomePageIKS
 
 # ? ToolTip: ?
 # Values allowed:
-# System Description, Requirement Documentation
+# SystemDescription, RequirementDocumentation
 # Mögliche Werte:
 # Systembeschreibung, Anforderungsdokumentation
 DocType = SystemDescription
@@ -16,7 +16,7 @@ DocType = SystemDescription
 # Minimum, Medium, Maximum
 # Mögliche Werte:
 # Minimal, Mittel, Maximal
-DocDepth = Minimum
+DocDepth = Maximum
 
 # ToolTip: The available environments are dynamically revealed
 # ToolTip: by parsing the available application properties files.
@@ -27,7 +27,7 @@ DocEnvironment = PRODUCTION
 
 # ? ToolTip: ?
 # Values allowed / Mögliche Werte:
-# PDF, XDOC, HTML
+# PDF, DOCX, HTML
 DocFormat = HTML
 
 #################  Section 3: Test report  #######################
