--- a/sources/sysnat.docing/pom.xml
+++ b/sources/sysnat.docing/pom.xml
@@ -8,13 +8,21 @@
   <parent>
     <groupId>com.iksgmbh.snt</groupId>
     <artifactId>sysnat.parent</artifactId>
-    <version>1.1.0-SNAPTHOT</version>
+    <version>1.1.0-SNAPSHOT</version>
   </parent>
   
   <dependencies>
    	<dependency>
   	  <groupId>com.iksgmbh.snt</groupId>
    	  <artifactId>sysnat.common</artifactId>
-  	  <version>1.1.0-SNAPTHOT</version>
-  	</dependency>  </dependencies>
+  	  <version>1.1.0-SNAPSHOT</version>
+  	</dependency>  
+  	
+    <dependency>
+  	  <groupId>com.iksgmbh.snt</groupId>
+   	  <artifactId>sysnat.testcase.generation</artifactId>
+  	  <version>1.1.0-SNAPSHOT</version>
+  	</dependency>  
+</dependencies>
+  	
 </project>
