handle IE click event differerntly

--- a/sources/sysnat.natural.language.executable.examples/testing.config
+++ b/sources/sysnat.natural.language.executable.examples/testing.config
@@ -23,8 +23,8 @@ TestExecutionFilter = -
 #################  Section 2: Test execution  #######################
 
 # Values allowed / Mögliche Werte:
-# Firefox, Firefox_45_9, Chrome, IE
-TestBrowser = Firefox
+# Firefox, Chrome, IE
+TestBrowser = Firefox_45_9
 
 # Values allowed:
 # quick, standard, slow
