--- a/sources/sysnat.natural.language.executable.examples/pom.xml
+++ b/sources/sysnat.natural.language.executable.examples/pom.xml
@@ -8,7 +8,7 @@
   <parent>
      <groupId>com.iksgmbh.snt</groupId>
      <artifactId>sysnat.parent</artifactId>
-     <version>1.1.0-SNAPSHOT</version>
+     <version>1.1.0</version>
      <relativePath>../sysnat.parent/pom.xml</relativePath>
   </parent>
    
@@ -18,25 +18,25 @@
   	<dependency>
   	  <groupId>com.iksgmbh.snt</groupId>
    	  <artifactId>sysnat.docing</artifactId>
-  	  <version>1.1.0-SNAPSHOT</version>
+  	  <version>1.1.0</version>
   	</dependency>
      	
   	<dependency>
   	  <groupId>com.iksgmbh.snt</groupId>
    	  <artifactId>sysnat.test.execution</artifactId>
-  	  <version>1.1.0-SNAPSHOT</version>
+  	  <version>1.1.0</version>
   	</dependency>
   	
   	<dependency>
   	  <groupId>com.iksgmbh.snt</groupId>
    	  <artifactId>sysnat.testcase.generation</artifactId>
-  	  <version>1.1.0-SNAPSHOT</version>
+  	  <version>1.1.0</version>
   	</dependency>
 
   	<dependency>
   	  <groupId>com.iksgmbh.snt</groupId>
    	  <artifactId>sysnat.testresult.archiving</artifactId>
-  	  <version>1.1.0-SNAPSHOT</version>
+  	  <version>1.1.0</version>
   	</dependency>
   	
     <dependency>
