--- a/sources/sysnat.common/pom.xml
+++ b/sources/sysnat.common/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>com.iksgmbh.snt</groupId>
     <artifactId>sysnat.common</artifactId>
-    <version>1.1.0</version>
+    <version>1.2.0-SNAPSHOT</version>
     <name>SNT Commons Module</name>
     <description>Technically inspired module providing code commonly used in other modules.</description>
 
