--- a/sources/sysnat.docing/pom.xml
+++ b/sources/sysnat.docing/pom.xml
@@ -8,20 +8,21 @@
   <parent>
     <groupId>com.iksgmbh.snt</groupId>
     <artifactId>sysnat.parent</artifactId>
-    <version>1.1.0</version>
+    <version>1.2.0-SNAPSHOT</version>
+    <relativePath>../sysnat.parent/pom.xml</relativePath>
   </parent>
   
   <dependencies>
    	<dependency>
   	  <groupId>com.iksgmbh.snt</groupId>
    	  <artifactId>sysnat.common</artifactId>
-  	  <version>1.1.0</version>
+  	  <version>1.2.0-SNAPSHOT</version>
   	</dependency>  
   	
     <dependency>
   	  <groupId>com.iksgmbh.snt</groupId>
    	  <artifactId>sysnat.testcase.generation</artifactId>
-  	  <version>1.1.0</version>
+  	  <version>1.2.0-SNAPSHOT</version>
   	</dependency>  
 </dependencies>
   	
