--- a/sources/sysnat.parent/pom.xml
+++ b/sources/sysnat.parent/pom.xml
@@ -3,7 +3,7 @@
 	
 	<groupId>com.iksgmbh.snt</groupId>
 	<artifactId>sysnat.parent</artifactId>
-	<version>1.3.0-SNAPSHOT</version>
+	<version>1.3.0</version>
 	<name>SNT Parent Module</name>
 	<packaging>pom</packaging>
 	
@@ -21,7 +21,7 @@
 	</modules>
 	
 	<properties>
-		<java.version>15</java.version>
+		<java.version>20</java.version>
 	</properties>
   
 	<dependencies>
@@ -29,7 +29,7 @@
 	   	<dependency>
 			<groupId>com.iksgmbh.snt</groupId>
 	 		<artifactId>sysnat.common</artifactId>
-			<version>1.3.0-SNAPSHOT</version>
+			<version>1.3.0</version>
 	  	</dependency>
 		
 	  	<dependency>
