--- a/sources/sysnat.test.runtime.environment/pom.xml
+++ b/sources/sysnat.test.runtime.environment/pom.xml
@@ -8,7 +8,7 @@
   <parent>
      <groupId>com.iksgmbh.snt</groupId>
      <artifactId>sysnat.parent</artifactId>
-     <version>1.3.0-SNAPSHOT</version>
+     <version>1.3.0</version>
      <relativePath>../sysnat.parent/pom.xml</relativePath>
   </parent>  
   
@@ -21,13 +21,13 @@
    	<dependency>
   	  <groupId>com.iksgmbh.snt</groupId>
    	  <artifactId>sysnat.testdata.import</artifactId>
-  	  <version>1.3.0-SNAPSHOT</version>
+  	  <version>1.3.0</version>
   	</dependency>
 
    	<dependency>
   	  <groupId>com.iksgmbh.snt</groupId>
    	  <artifactId>sysnat.testresult.archiving</artifactId>
-  	  <version>1.3.0-SNAPSHOT</version>
+  	  <version>1.3.0</version>
   	</dependency>
         
 	<!-- gui test framework dependencies -->
