--- a/sources/sysnat.natural.language.executable.examples/testing.config
+++ b/sources/sysnat.natural.language.executable.examples/testing.config
@@ -8,7 +8,7 @@ TestApplication = HomePageIKS
 # ToolTip: The available environments are dynamically revealed
 # ToolTip: by parsing the available application properties files.
 # ToolTip: It must be one of the TargetEnv enum: LOCAL, DEVELOPMENT, INTEGRATION, ACCEPTANCE, PREPROD, PRODUCTION
-TestEnvironment = PRODUCTION
+TestEnvironment = LOCAL
 
 # ToolTip: Values allowed are listed in each report's overview section.
 # ToolTip: Additional filter values can be defined in the nlxx files.
@@ -35,7 +35,7 @@ TestExecutionSpeed = schnell
 #################  Section 3: Test report  #######################
 
 # ? ToolTip: ?
-TestReportName = HomePageIKS-PRODUCTION-Alle
+TestReportName = HelloWorldSpringBoot-LOCAL-ValidateRepeatedGreeting
 
 # ? ToolTip: ?
 TestReportArchiveDir =
